--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@repo/types": "*",
     "@repo/ui": "*",
+    "axios": "^1.7.7",
     "next": "14.2.6",
     "react": "18.3.1",
     "react-dom": "18.3.1"
