--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "exports": {
-    "./button": "./src/button.tsx",
-    "./card": "./src/card.tsx",
-    "./code": "./src/code.tsx"
+    "./tableHeader": "./src/TableHeader.tsx",
+    "./ask": "./src/Ask.tsx",
+    "./bid": "./src/Bid.tsx"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
