--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,6 +12,7 @@
     "@repo/types": "*",
     "@repo/ui": "*",
     "axios": "^1.7.7",
+    "lightweight-charts": "^4.2.0",
     "next": "14.2.6",
     "react": "18.3.1",
     "react-dom": "18.3.1"
