--- a/apps/engine/package.json
+++ b/apps/engine/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -b",
     "start": "cross-env WITH_SNAPSHOT=true node dist/index.js",
     "dev": "npm run build && npm run start"
   },
