add redis url in dbProcessor

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,7 @@ services:
     image: ayush272002/exchange-engine:latest
     environment:
       - WITH_SNAPSHOT=true
+      - REDIS_URL=redis://redis:6379
     depends_on:
       - redis
   
@@ -83,6 +84,11 @@ services:
       - "6379:6379"
     volumes:
       - redis-data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 volumes:
   timescale-data:
