--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,6 +61,7 @@ services:
       - PGDATABASE=postgres
       - PGPASSWORD=mysecretpassword
       - PGPORT=5432
+      - REDIS_URL=redis://redis:6379
     depends_on:
       - timescaledb
       - redis
