--- a/apps/engine/package.json
+++ b/apps/engine/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc -b",
-    "start": "cross-env WITH_SNAPSHOT=true node dist/index.js",
-    "dev": "npm run build && npm run start"
+    "start": "WITH_SNAPSHOT=true node dist/index.js",
+    "dev": "npm run build && cross-env WITH_SNAPSHOT=true node dist/index.js"
   },
   "keywords": [],
   "author": "",
